# rust_ollama_wrapper

./: Cargo.toml  README.md
src/: main.rs
