[package]
name = "rust_llm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["trace"] }
anyhow = "1.0"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1.0"
dotenvy = "0.15"
async-stream = "0.3"
